syntax = "proto3";
package netty;  
option java_package = "com.yzh.netty.encode.protobuf";  
option java_outer_classname = "SubscribeReqProto";  

message SubscribeReq{  
    ProtoHeader header = 1;
    ProtoBody body = 2;
}

message ProtoHeader{

	enum MsgType {  
		DEFAULT = 0;
	    LOGIN_REQ = 1;
	    LOGIN_RESP = 2;
	    LOGIN_OK = 3;
	    LOGIN_OUT_OF_WHITE_IP = 4;
	    LOGIN_DENY = 5;
	    HEARTBEAT_REQ = 6;
	    HEARTBEAT_RESP = 7;
	    GAME_REQ = 8;
	    GAME_RESP = 9;
	}  
	
	int32 subReqID = 1;  
	// enum
	MsgType msgType = 2;
}

message ProtoBody{  
    string userName = 1;  
    string productName = 2;  
    
    // list
    repeated string address = 3;
    
    map<string,ProtoHeader> header_map = 4;
}


